--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,100 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@media screen {
+
+    main {
+        flex: 1 0 auto;
+    }
+    body {
+        margin: 0;
+        padding: 0;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+        "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+        sans-serif;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+    }
+
+    code {
+        font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+        monospace;
+    }
+
+    .topnav {
+        height: 30px;
+        line-height: 30px;
+    }
+    /*this site & site-content class can be body and main remember that footer need to be out of main and side-content to make it stick to bottom*/
+    .site {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+    }
+    .site-content {
+        display: flex;
+        flex-grow: 1;
+        width: 100%;
+        height: 100%;
+        align-items: center;
+        justify-content: center;
+    }
+    .row {
+        margin-top: 1.5em;
+    }
+    /*
+        Change color of border-bottom to match cyan color
+     */
+    input[type=text]:focus, input[type=password]:focus {
+        border-bottom: 2px solid #4dd0e1;
+    }
+
+    input[type=text]:invalid, input[type=password]:invalid,
+    input[type=number]:invalid, input[type=password]:invalid {
+        border-bottom: 2px solid #f50856;
+    }
+    /* Change icon to the color cyan*/
+    .input-field .prefix.active {
+        color: #4dd0e1;
+    }
+    /* Change label to match color cyan*/
+    input[type=email]:not(.browser-default):focus:not([readonly]) + label,
+    input[type=password]:not(.browser-default):focus:not([readonly]) + label,
+    input[type=text]:not(.browser-default):focus:not([readonly]) + label,
+    input[type=number]:not(.browser-default):focus:not([readonly]) + label {
+        color: #4dd0e1;
+    }
+
+    input[type=email]:not(.browser-default):focus:not([readonly]),
+    input[type=password]:not(.browser-default):focus:not([readonly]),
+    input[type=text]:not(.browser-default):focus:not([readonly]),
+    input[type=number]:not(.browser-default):focus:not([readonly]) {
+        border-bottom: 1px solid #4dd0e1;
+        box-shadow: 0 1px 0 0 #4dd0e1;
+    }
+
+    .input-field .prefix {
+        color: lightgrey;
+    }
+
+    [type="checkbox"].filled-in:checked + span:not(.lever):after {
+        background-color: #4dd0e1;
+        border: 2px solid #4dd0e1;
+    }
+
+    [type="checkbox"].filled-in:not(:checked) + span:not(.lever):after {
+        border: 2px solid lightgrey;
+    }
+
+    textarea.materialize-textarea.valid:focus, .select-wrapper.valid > input.select-dropdown {
+        border-bottom: 1px solid #4dd0e1;
+        -webkit-box-shadow: 0 1px 0 0 #4dd0e1;
+        box-shadow: 0 1px 0 0 #4dd0e1;
+    }
+
+    .select-wrapper input.select-dropdown:focus {
+        border-bottom: 1px solid #4dd0e1;
+        box-shadow: 0 1px 0 0 #4dd0e1;
+    }
+
+
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
