--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,9 @@
         flex-grow: 1;
         width: 100%;
         height: 100%;
-        align-items: center;
-        justify-content: center;
+        padding-top: 20px;
+        /*align-items: center;*/
+        /*justify-content: center;*/
     }
     .row {
         margin-top: 1.5em;
