--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@
         flex-grow: 1;
         width: 100%;
         height: 100%;
-        padding-top: 20px;
+        /*padding-top: 20px;*/
         /*align-items: center;*/
         /*justify-content: center;*/
     }
